# QtDemos

./: CMakeLists.txt  LICENSE  README.md
draw_QImage_in_thread/: CMakeLists.txt  main.cpp  widget.h
res/: res.qrc
